Test/InvalidFiles/PgCompletionist/InvalidControl0.cs
namespace PgCompletionist;

using System.Diagnostics;
using System.Windows.Markup;

[ContentProperty("None")]
[DebuggerDisplay("None")]
public class InvalidControl0
{
}
